improved styling, issue with graph plotting

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div class="controls">
             <button id="pauseBtn">Pause</button>
             <button id="resetBtn">Reset</button>
-            <input type="range" id="sparsenessSlider" min="0" max="1" step="0.1" value="0.5">
+            <p>Scarsity:</p>
+            <input type="range" id="sparsenessSlider" min="0" max="1" step="0.01" value="0.5">
         </div>
         <canvas id="aliveCellsChart"></canvas>
     </div>
