--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head></head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game of Life</title>
     <link rel="stylesheet" href="./assets/styles/styles.css">
 </head>
 <body>
+    <h1>Conway's Game of Life</h1>
     <div id="grid"></div>
     <div class="control-chart-container">
         <div class="controls">
